tests/spec/emit/snapshots/never_bodied_lambda_into_unknown_emits_unit_return.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn take_any(x: Unknown) {}
  
  fn test() {
    take_any(|| { panic("boom") })
  }
---
package main

func takeAny(_ any) {}

func test() {
	takeAny(func() {
		panic("boom")
	})
}
