tests/spec/emit/snapshots/never_returning_user_function_in_body.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn fail(msg: string) -> Never { panic(msg) }
  
  fn test() -> string {
    fail("boom")
  }
---
package main

func fail(msg string) {
	panic(msg)
}

func test() string {
	fail("boom")
	panic("unreachable")
}
