tests/spec/emit/snapshots/never_typed_let_shadowing_same_block_binding_takes_fresh_name.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn fail(msg: string) -> Never { panic(msg) }
  
  fn test(n: int) {
    let x = n + 1
    let _ = x
    let x: int = fail("boom")
    let _ = x
  }
---
package main

func fail(msg string) {
	panic(msg)
}

func test(n int) {
	x := n + 1
	_ = x
	var x_1 int
	fail("boom")
	_ = x_1
}
