tests/spec/emit/snapshots/newtype_field_assign_ref_expr_position.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Wrap(int)
  
  fn main() {
    let mut w = Wrap(0)
    let mut r = &w
    let _ = { r.* = Wrap(1) }
    let _ = w.0
  }
---
package main

type Wrap int

func main() {
	w := Wrap(0)
	r := &w
	*r = Wrap(1)
	_ = int(w)
}
